gcc/testsuite/algol68/compile/error-stropping-6.a68
# { dg-options "-fstropping=upper" } #
BEGIN INT j;
      j := "joo" # { dg-error "CHAR.*INT" } #
END
